-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: Impala 2.10.0
-
Fix Version/s: Impala 2.10.0
-
Component/s: Backend
-
Labels:None
-
Epic Color:ghx-label-3
Squeasel will be getting TLS cipher suite and version configuration after this pull request is merged.
We should import that change, then plumb through the relevant configuration options to the Squeasel instance from Impala.