IMPALA-5800: Configure Squeasel's cipher suite and TLS version

* Import Squeasel as of
  https://github.com/cloudera/squeasel/commit/1e5f611, which adds TLS
  version and cipher suite configuration.

* Plumb through --ssl_minimum_version and --ssl_cipher_list to the
  Squeasel options in webserver.cc.

Testing: manually confirm that webserver connections have desired
protocol version and cipher suite. Add two tests to webserver-test to
check that misconfiguration leads to a failure.

Change-Id: I23fb17257098992c65e50c1e83a905c9a85db6a2
Reviewed-on: http://gerrit.cloudera.org:8080/7679
Reviewed-by: Sailesh Mukil <sailesh@cloudera.com>
Reviewed-by: Henry Robinson <henry@cloudera.com>
Tested-by: Impala Public Jenkins